samples/_failures_safe/1761669251_bf82e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_51d75bc1.c: In function ‘main’:
./samples/SAFE/__tmp_51d75bc1.c:174:5: error: expected ‘,’ or ‘;’ at end of input
  174 |     int choice = atoi
      |     ^~~
./samples/SAFE/__tmp_51d75bc1.c:174:5: error: expected declaration or statement at end of input
